--- a/src/blog/hello-world.ru.mdx
+++ b/src/blog/hello-world.ru.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Привет, мир: Мой первый пост"
+title: "Тестовый пост"
 pubDate: 2025-01-29
 description: "Добро пожаловать в мой блог! В этом посте демонстрируются все поддерживаемые типы встраиваемого контента: изображения, GIF, видео с YouTube и другое."
 tags: ["intro", "demo"]
